resolve several deprecation warnings